# zephyr

./: CODEOWNERS
arch/arm64/: CMakeLists.txt
arch/arm64/core/: fpu.c  prep_c.c  reset.S  switch.S  vector_table.S
arch/arm64/core/offsets/: offsets.c
arch/arm64/core/xen/: CMakeLists.txt  Kconfig  enlighten.c  fdt.c  hypercall.S
arch/arm64/xen/: CMakeLists.txt  enlighten.c  hypercall.S
boards/arm64/xenvm/: Kconfig.defconfig  xenvm.dts  xenvm_defconfig
cmake/linker_script/common/: common-ram.cmake
drivers/: CMakeLists.txt
drivers/console/: CMakeLists.txt  uart_console.c  xen_pvconsole.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.xen  uart_hvc_xen.c
drivers/xen/: CMakeLists.txt  events.c  gnttab.c  hvm.c  memory.c  test_irq.c  xen.c  xen_test.c  xenbus.c
drivers/xen/dom0/: dom0.c  domctl.c
drivers/xen/xenbus/: client.c  xenbus.c  xs.c  xs_comms.c  xs_watch.c
include/arch/arm64/: exc.h  hypercall.h
include/linker/: common-ram.ld
include/xen/: console.h  events.h  generic.h  hvm.h
include/xen/public/: arch-arm.h  domctl.h  grant_table.h  memory.h  xen.h
include/xen/public/hvm/: hvm_op.h
include/zephyr/linker/: common-ram.ld
include/zephyr/xen/: memory.h
include/zephyr/xen/xenbus/: client.h  xenbus.h  xs.h  xs_comms.h  xs_watch.h
samples/subsys/shell/shell_module/: CMakeLists.txt
samples/synchronization/src/: main.c
samples/xen_fdt_test/: CMakeLists.txt  prj.conf  sample.yaml
samples/xen_fdt_test/src/: main.c
soc/arm64/xenvm/: mmu_regions.c
